Deleted <center> tag

--- a/Introduction_Final_Project_Night_at_a_Museum_in_Paris.ipynb
+++ b/Introduction_Final_Project_Night_at_a_Museum_in_Paris.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1><center> Applied DS Capstone - Final Project </center>"
+    "<h1>Applied DS Capstone - Final Project"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1><center> The Battle of Neighborhood: Night at the Museum (in Paris) </center>"
+    "<h1>The Battle of Neighborhood: Night at the Museum (in Paris)"
    ]
   },
   {
